# cricket-analytics

./: .gitignore  README.md  pyproject.toml  run_ui.py
scripts/: get_snippet.sh
src/: cricket.py  cricket_ui.py  launcher.py
